--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="img/pngwing.com.png" type="image/x-icon">
-  <meta property="og:image" content="https://cuits.my.id/v1/img/ilus.png">
-  <title>CuitsApp | Anonymous Chat</title>
+  <link rel="shortcut icon" href="kucing.png" type="image/x-icon">
+  <meta property="og:image" content="kucing.png">
+  <title>CuitsApp | Cek Khodam</title>
   <!-- Import Tailwind CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
